<resources>
    <string name="app_name">Venda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">LOGIN</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="register">Add More Details</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">SUBMIT</string>


    <string name="more">Add More Detail</string>
    <string name="itemTitle">Item </string>
    <string name="itemPrice">Price</string>
    <string name="itemDescription">More Information</string>
    <string name="submit">Submit</string>
    <string name="itemCategory">Category</string>
    <string name="itemCondition">Condition</string>


    <string name="squarecamera__app_name">SquareCamera</string>
    <string name="squarecamera__action_settings">Settings</string>
    <string name="squarecamera__start_image_capture">Take New Picture!</string>
    <string name="squarecamera__capture_image">Snap It!</string>
    <string name="squarecamera__save_image">Save</string>
    <string name="squarecamera__cancel">Cancel</string>
    <string name="squarecamera__swap_camera">Swap</string>
    <string name="squarecamera__flash">Flash</string>
    <string name="squarecamera__auto_flash">Auto Flash</string>
    <string name="squarecamera__no_flash">No Flash</string>
    <string name="squarecamera__recapture_image">Retake Picture</string>
    <string name="squarecamera__capturing_image">Taking New Picture</string>
    <string name="squarecamera__done">Done</string>
    <string name="squarecamera__request_write_storage_permission_text">Approval is needed to save your photo on your device</string>
    <string name="title_activity_upload"></string>
    <string name="section_1">Section 1</string>
    <string name="some_informations">Description</string>
    <string name="section_2">Section 2</string>


</resources>
