<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/imageView"
                android:src="@drawable/like"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_below="@+id/v1"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/finalItemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemTitle"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/finalItemPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemPrice"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/finalItemDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemDescription"
                        android:imeActionId="@+id/login"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:windowSoftInputMode="adjustResize"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lay2"
                android:layout_below="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemCategory"/>

                    <io.vaxly.venda.utils.MultiSpinner
                        android:layout_weight="1"
                        android:id="@+id/spinnerMulti"
                        android:singleLine="true"
                        android:layout_marginLeft="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/itemCondition"/>

                    <Spinner
                        android:layout_weight="1"
                        android:spinnerMode="dropdown"
                        android:id="@+id/spinner"
                        android:layout_marginRight="12dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>





            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/buttonNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:layout_marginLeft="12dp"
                    android:background="@drawable/stroke"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>