<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:lv="http://schemas.android.com/tools">


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/drawee"
        fresco:actualImageScaleType="centerCrop"
        fresco:fadeDuration="300"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical">

            <io.vaxly.venda.utils.LoadingView
                android:id="@+id/loading_view"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="64dp"
                android:padding="@dimen/activity_horizontal_margin">


                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="20dp"
                    app:mtf_cardCollapsedHeight="4dp"
                    app:mtf_labelColor="@color/loading_head"
                    app:mtf_openKeyboardOnFocus="true">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:hint="@string/itemTitle"
                        android:singleLine="true"
                        android:textColor="#333"
                        android:textColorHint="#666"
                        android:textSize="24sp" />

                </com.github.florent37.materialtextfield.MaterialTextField>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="20dp"
                    app:mtf_cardCollapsedHeight="4dp"
                    app:mtf_labelColor="@color/loading_head"
                    app:mtf_image="@drawable/euro"
                    app:mtf_openKeyboardOnFocus="true">

                    <EditText
                        android:id="@+id/Price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/itemPrice"
                        android:singleLine="true"
                        android:textColor="#333"
                        android:textColorHint="#666"
                        android:textSize="20sp" />

                </com.github.florent37.materialtextfield.MaterialTextField>



                <Button
                    android:layout_weight="1"
                    android:id="@+id/buttonNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/material_login_register_color"
                    android:textSize="32sp"
                    android:layout_gravity="center" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">



                <Button
                    android:id="@+id/buttonRegistra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/material_login_register_color"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal|bottom" />

            </LinearLayout>

        </LinearLayout>


</RelativeLayout>


